--- a/package.json
+++ b/package.json
@@ -17,24 +17,26 @@
     "@angular/compiler": "^11.0.5",
     "@angular/core": "^11.0.5",
     "@angular/forms": "^11.0.5",
+    "@angular/localize": "^11.0.5",
     "@angular/platform-browser": "^11.0.5",
     "@angular/platform-browser-dynamic": "^11.0.5",
     "@angular/router": "^11.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@progress/kendo-angular-common": "^2.0.0",
+    "@progress/kendo-angular-l10n": "^3.0.0",
     "@progress/kendo-angular-notification": "^3.0.0",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-theme-default": "latest",
     "@types/jquery": "^3.5.5",
     "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
+    "moment": "^2.29.1",
     "primeicons": "^4.1.0",
-    "primeng": "^11.0.0",
+    "primeng": "^11.2.0",
     "redux": "^4.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "@progress/kendo-angular-common": "^2.0.0",
-    "@progress/kendo-angular-l10n": "^3.0.0",
-    "@progress/kendo-licensing": "^1.0.2",
-    "@angular/localize": "^11.0.5",
-    "@progress/kendo-theme-default": "latest"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.5",
@@ -52,6 +54,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
+    "rxjs-compat": "^6.6.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "^4.0.5"
