--- a/package.json
+++ b/package.json
@@ -25,17 +25,20 @@
     "@progress/kendo-angular-common": "^2.0.0",
     "@progress/kendo-angular-l10n": "^3.0.0",
     "@progress/kendo-angular-notification": "^3.0.0",
-    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-licensing": "^1.1.3",
     "@progress/kendo-theme-default": "latest",
     "@types/jquery": "^3.5.5",
+    "add": "^2.0.6",
     "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
     "moment": "^2.29.1",
+    "or": "^0.2.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.2.0",
     "redux": "^4.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "yarn": "^1.22.10",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
